// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno 1`] = `
{
  "code": 0,
  "files": [],
  "signal": null,
  "stderr": "",
  "stdout": "cirno/0.0.1

Usage:
  $ cirno <command> [options]

Commands:
  init                   Initialize a new project
  list                   List all instances
  import [src] [name]    Import an instance
  export [id] [dest]     Export an instance
  clone [id] [name]      Clone an instance
  backup [id] [name]     Backup an instance
  restore [head] [base]  Restore an instance
  remove [id]            Remove an instance

For more info, run any command with the \`--help\` flag:
  $ cirno init --help
  $ cirno list --help
  $ cirno import --help
  $ cirno export --help
  $ cirno clone --help
  $ cirno backup --help
  $ cirno restore --help
  $ cirno remove --help

Options:
  -h, --help     Display this message 
  -v, --version  Display version number 
",
}
`;

exports[`step 2: cirno init 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Cirno project initialized.
",
}
`;

exports[`step 3: cirno init 1`] = `
{
  "code": 1,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " Error  Project already exists. Use \`cirno init -f\` to overwrite.
",
}
`;

exports[`step 4: cirno import <fixtures>/foo 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": "{
  "name": "foo",
  "version": "1.0.0",
  "packageManager": "yarn@4.3.1"
}
",
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7.
",
}
`;

exports[`step 5: cirno export <#1> <exports>/foo.zip 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": "{
  "name": "foo",
  "version": "1.0.0",
  "packageManager": "yarn@4.3.1"
}
",
      "path": "instances/cd5fbb72-8243-5ccf-b8ca-ceee993585f7/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully exported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 to <exports>/foo.zip.
",
}
`;

exports[`step 6: cirno remove <#1> 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 is successfully removed.
",
}
`;

exports[`step 7: cirno remove <#1> 1`] = `
{
  "code": 1,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " Error  Instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 not found.
",
}
`;

exports[`step 8: cirno import <exports>/foo.zip 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "path": "cirno.yml",
    },
    {
      "content": "{
  "name": "foo",
  "version": "1.0.0",
  "packageManager": "yarn@4.3.1"
}
",
      "path": "instances/5ab7bff9-d000-5c3b-83ac-4c3c4296ee19/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19.
",
}
`;
